<resources>

    <!-- Strings related a homeActivity-->
    <string name="emailHome">Email</string>
    <string name="password">Contraseña</string>
    <string name="button_start_sesion">Iniciar Sesiòn</string>
    <string name="create_count">Crear cuenta</string>

    <!-- Strings related a CreateCount-->
    <string name="passwordCreate">Contraseña</string>
    <string name="emaild">Correo</string>
    <string name="user">Usuario</string>
    <string name="passwordRepetir">Repetir Contraseña</string>
    <string name="apellido">Apellido</string>
    <string name="nameUser">Nombre</string>
    <string name="buttonAceptar">Aceptar</string>
    <string name="buttonCancelar">Cancelar</string>

    <!-- Strings related a FragmentProject-->

    <string name="projectName">Nombre del Proyecto</string>
    <string name="contracNumber">Numero del Contrato</string>
    <string name="cityProject">Ciudad</string>
    <string name="directionProject">Direccion del proyecto</string>

    <string name="descripcion">Ingrese los avances de cada actividad por periodo</string>
    <string name="app_name">EVM</string>
    <string name="title_mainactivity">Main Activity</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to sections -->
    <string name="seccion_1">Cargar Proyecto</string>
    <string name="seccion_2">Mis proyectos</string>
    <string name="seccion_3">Informe por periodo</string>
    <string name="seccion_4">Curva S de costos</string>
    <string name="seccion_5">Indices de desempeño</string>
    <string name="seccion_6">Pronostico del costo final del proyecto</string>
    <string name="seccion_7">Causale de no cumplimiento</string>
    <string name="seccion_8">Generar reporte pdf</string>
    <string name="seccion_9">Cerrar sesion</string>

    <string name="action_settings">Settings</string>
    <string name="opcion_1">opcion_1</string>
    <string name="opcion_2">opcion_2</string>

    <string name="otras_opciones">otras_opciones</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="usuario">Usuario</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Fragmento proyecto -->

    <string name="informacion_del_proyecto">Informaciòn del proyecto</string>
    <string name="nombre_del_proyecto">Nombre del proyecto</string>
    <string name="direccion_del_proyecto">Direcciòn del proyecto</string>
    <string name="ciudad_del_proyecto">Ciudad del proyecto</string>
    <string name="number_contract">Nùmero del contrato</string>
    <string name="cargar_archivo">Cargar Archivo</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">hello_blank_fragment</string>

    <string-array name="periodos">
        <item>Periodo 1-12-2001</item>
        <item>Periodo 1-13-2001</item>
        <item>Periodo 1-16-2001</item>
        <item>Periodo 1-14-2001</item>
        <item>Periodo 1-19-2001</item>
    </string-array>
</resources>
