<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_seccion_1"
            android:icon="@mipmap/ic_assignment_late_black_24dp"
            android:title="@string/seccion_1"/>
        <item
            android:id="@+id/menu_seccion_2"
            android:icon="@mipmap/ic_assignment_late_black_24dp"
            android:title="@string/seccion_2"/>
        <item
            android:id="@+id/menu_seccion_3"
            android:icon="@mipmap/ic_assignment_late_black_24dp"
            android:title="@string/seccion_3"/>
        <item
            android:id="@+id/menu_seccion_4"
            android:icon="@mipmap/ic_assignment_late_black_24dp"
            android:title="@string/seccion_4"/>
        <item
            android:id="@+id/menu_seccion_5"
            android:icon="@mipmap/ic_assignment_late_black_24dp"
            android:title="@string/seccion_5"/>
        <item
            android:id="@+id/menu_seccion_6"
            android:icon="@mipmap/ic_assignment_late_black_24dp"
            android:title="@string/seccion_6"/>
        <item
            android:id="@+id/menu_seccion_7"
            android:icon="@mipmap/ic_assignment_late_black_24dp"
            android:title="@string/seccion_7"/>
        <item
            android:id="@+id/menu_seccion_8"
            android:icon="@mipmap/ic_assignment_late_black_24dp"
            android:title="@string/seccion_8"/>
        <item
            android:id="@+id/menu_seccion_9"
            android:icon="@mipmap/ic_assignment_late_black_24dp"
            android:title="@string/seccion_9"/>





    </group>

    <item
        android:id="@+id/navigation_subheader"
        android:title="@string/otras_opciones">
        <menu>
            <item
                android:id="@+id/menu_opcion_1"
                android:icon="@mipmap/ic_assignment_late_black_24dp"
                android:title="@string/opcion_1"/>
            <item
                android:id="@+id/menu_opcion_2"
                android:icon="@mipmap/ic_assignment_late_black_24dp"
                android:title="@string/opcion_2"/>
        </menu>
    </item>
</menu>