<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/photo_crop_highlight_color"
    tools:context="com.example.n550j.myapplication.homeActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="81dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:hint="@string/emailHome"
            android:layout_marginTop="154dp"
            android:id="@+id/Editexemail"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
             />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="133dp">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_marginTop="27dp"
        android:id="@+id/Editexpassword"
        android:hint="@string/password"/>
    </android.support.design.widget.TextInputLayout>


    <Button
        android:text="@string/button_start_sesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonStartSssion"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/create_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonStartSssion"
        android:layout_marginTop="22dp"
        android:id="@+id/CrearCuenta"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
